# Galaxy-Log

./: CMakeLists.txt  README.md  config.py
include/Galaxy-Log/: log.hpp
include/gal/: log
include/gal/log/: log.hpp
src/Galaxy-Log/: log.cpp
test/: CMakeLists.txt  main.cpp
test/src/: main.cpp
